# FootballHeritage

./: README.md  SETUP_GUIDE.md  codebase_index.json  fix_admin_role.sql  reset_admin_password.sql  start-with-predictions.ps1  test_parlay_api.ps1
_config/: brand.md  conventions.md  glossary.md  tech-stack.md
backend/: .env.example  .gitignore  ADMIN_BACKEND_COMPLETE.md  Cargo.toml  DUAL_DATABASE_SETUP.md  MIGRATION_INSTRUCTIONS.md  PROFILE_APIS_COMPLETE.md  README_OPTIMIZATION.md  SIMPLIFIED_BETTING_README.md  add_transaction_status.sql  fix_migrations.sql  football.session.sql  reset_migrations.sql  run_migration.ps1  schema.sql  test_auth.ps1
backend/.cargo/: config.toml
backend/backup/: Cargo.toml
backend/backup/src/: auth.rs  betting.rs  betting_simple.rs  crypto.rs  errors.rs  main.rs  utils.rs
backend/backup/src/handlers/: betting.rs  limits.rs  monitoring.rs  not_found.rs
backend/backup/src/middleware/: mod.rs  security_headers.rs
backend/docs/: API_DOCUMENTATION.md  BETTING_SERVICE_GUIDE.md  BUILD_OPTIMIZATION.md  CODE_CLEANUP_SUMMARY.md  COMMANDS.txt  COMPILATION_FIXES.md  COMPLETE_FIX.md  COMPLETE_GUIDE.txt  DELIVERY_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DO_THIS_NOW.md  ERR_FAILED_FIX.md  EXECUTIVE_SUMMARY.md  FINAL_SUMMARY.txt  FIX_APPLIED.txt  HOW_TO_RUN.md  IMMEDIATE_FIX.md  MANUAL_OPTIMIZATION.md  MIGRATIONS_QUICKSTART.txt  MIGRATION_FIX.md  OPTIMIZATIONS_APPLIED.txt  OPTIMIZATION_CHECKLIST.md  OPTIMIZATION_STATUS.txt  OPTIMIZATION_SUMMARY.md  OPTIMIZE_NOW.md  QUICKSTART.md  QUICK_REFERENCE.md  SIMPLE_FIX.md  SQLX_MIGRATIONS_GUIDE.md  START_HERE.txt  SUCCESS.txt  TRANSACTION_FIXES.md  build_log2.txt  full_build_log.txt  incompatibilities.txt  log.txt
backend/examples/: betting_integration.rs
backend/migrations/: 20251024000001_add_admin_system.sql  20251025000001_add_external_tracking.sql  20251027000001_add_parlay_calculator.sql  20251101000001_add_event_date_index.sql  (+9 more)
backend/migrations.disabled/: 20241019000001_initial_schema.sql
chatbot/: .env.example  .gitignore  README.md  index.js  package-lock.json  package.json  test-jwt.js
frontend/: .env  .env.example  .gitignore  README.md  TYPESCRIPT_MIGRATION_PLAN.md  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
pipeline/: .env.example  .gitignore  ADMIN_PANEL_FIX.md  API_PORT_CONFIG.md  API_SETUP_GUIDE.md  AUTOMATION_SETUP.md  AUTOMATION_SUMMARY.md  BACKEND_SYNC_COMPLETE.md  GET_MORE_DATA.md  INTEGRATION_GUIDE.md  MATCHUP_PREDICTION.md  NCAA_BASKETBALL_GUIDE.md  NCAA_INTEGRATION_SUMMARY.md  NEXT_STEPS.md  PIPELINE_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_HERITAGE_DB.md  STATUS.md  auto_download_data.py  check_backend.py  check_cl.py  check_data.py  check_schema.py  check_sports.py  config.py  download_sample_data.py  example_client.py  fetch_more_data.py  fix_match_ids.py  fix_sport_names.py  heritage_config.py  load_to_heritage_db.py  monitor_pipeline.py  performance_test.py  regenerate_predictions.py  requirements.txt  run_daily_fetch.bat  run_daily_fetch_with_sync.bat  (+13 more)
scripts/: backup_databases.bat  backup_databases.py  restore_databases.bat  restore_databases.py
setup/: questionnaire.md
shared/: domain-notes.md
(+241 files in other folders)
